# HikeToMint

./: .gitignore  GITHUB_SETUP.md  README.md  netlify.toml
anchor/: Anchor.toml
anchor/programs/hike_to_mint/: Cargo.toml
anchor/programs/hike_to_mint/src/: lib.rs
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: WalletProvider.tsx
frontend/src/hooks/: useGeolocation.ts
frontend/src/idl/: hike_to_mint.json
